Updated total seat and ticket count

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="seat"></div>
         <div class="seat"></div>
         <div class="seat"></div>
-        <div class="seat occupied"></div>
+        <div class="seat"></div>
         <div class="seat"></div>
         <div class="seat"></div>
         <div class="seat"></div>
@@ -81,7 +81,7 @@
         <div class="seat"></div>
         <div class="seat"></div>
         <div class="seat"></div>
-        <div class="seat occupied"></div>
+        <div class="seat"></div>
         <div class="seat"></div>
         <div class="seat"></div>
         <div class="seat"></div>
@@ -94,7 +94,7 @@
         <div class="seat"></div>
         <div class="seat occupied"></div>
         <div class="seat occupied"></div>
-        <div class="seat occupied"></div>
+        <div class="seat"></div>
       </div>
     </div>
 
